2010-04-30 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_io.php: added in the function "safe_output" the flag
	$utf8 for set the encoding of output, by default true.

2010-04-29 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: fixed typo mistake in
	the sla vars in javascript.

2010-04-29 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_ui.php: added the function "printTruncateText" for
	facilitate trunc texts, and add the eye candy the tooltip.

	* godmode/reporting/reporting_builder.list_items.php: used the new function
	"printTruncateText".

2010-04-29  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Added TTO, TTR, MTBF and MTTR
	  reports.

	* include/functions_db.php: Fixed get_previous_data and wrote
	  get_next_data.

2010-04-29  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php
	  include/functions_db.php

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* godmode/setup/gis_step_2.php: Fixed the creation 
	of map connection without name and without type
	of connection. Bug:2993713

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* godmode/servers/manage_recontask.php: Fixed the creation
	of recon task without name and network. Also, the network 
	is checked by the following regular expression 
	"/[0-9]+.+[0-9]+.+[0-9]+.+[0-9]+\/+[0-9]/"

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php: Fixed that
	was allowed to create a visual map without name and without
	background. Bug: 2993503

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed the critical render
	from an object that was not static graph when was heredated
	from another layout. Bug 2940950

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_prediction.php: 
	Limited the source modules availables for the prediction