@@ -1,3 +1,9 @@
+2010-04-30  Sergio Martin  <sergio.martin@artica.es>
+
+	* operation/snmpconsole/snmp_view.php: Fixed the custom 
+	value column tooltip. Now, the tooltip shows the full
+	value instead of the custom OID. Bug: 2940432
+
 2010-04-30 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_io.php: added in the function "safe_output" the flag
